--- a/templates/managenav.mustache
+++ b/templates/managenav.mustache
@@ -17,10 +17,13 @@
 {{!
     @template local_curriculum/managenav
 
-    TODO describe template managenav
+    Main navigation for curriculum management pages.
 
     Example context (json):
     {
+        "wwwroot": "http://localhost/moodle",
+        "ismanage": true,
+        "istree": false
     }
 }}
 <ul class="nav nav-pills curriculum-managenav">
