--- a/templates/tree.mustache
+++ b/templates/tree.mustache
@@ -1,8 +1,63 @@
 {{!
+    This file is part of Moodle - http://moodle.org/
+
+    Moodle is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+
+    Moodle is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    along with Moodle.  If not, see <http://www.gnu.org/licenses/>.
+}}
+{{!
+    @template local_curriculum/tree
+
     Curriculum tree template.
 
-    Context variables:
-    @var array programs List of program objects with nested versions, cycles, and items
+    Example context (json):
+    {
+        "wwwroot": "http://localhost/moodle",
+        "programs": [
+            {
+                "id": 1,
+                "name": "Program 1",
+                "description": "Description for Program 1",
+                "manageurl": "http://localhost/moodle",
+                "versions": [
+                    {
+                        "id": 10,
+                        "name": "Version 1",
+                        "startdate": 1704067200,
+                        "enddate": 1735689600,
+                        "manageurl": "http://localhost/moodle",
+                        "cycles": [
+                            {
+                                "id": 100,
+                                "name": "Cycle 1",
+                                "stage": "Stage 1",
+                                "duration": 30,
+                                "description": "Description for Cycle 1",
+                                "manageurl": "http://localhost/moodle",
+                                "items": [
+                                    {
+                                        "id": 1000,
+                                        "coursecode": "COURSE101",
+                                        "grouptemplate": "Group Template 1",
+                                        "validity": 60
+                                    }
+                                ]
+                            }
+                        ]
+                    }
+                ]
+            }
+        ]
+    }
 }}
 <div class="curriculum-tree">
     <div class="curriculum-tree-controls">
