--- a/styles.css
+++ b/styles.css
@@ -211,28 +211,6 @@
     display: none;
 }
 
-/* Responsive adjustments */
-@media (max-width: 768px) {
-    .curriculum-tree-item {
-        flex-wrap: wrap;
-    }
-
-    .curriculum-tree-actions {
-        margin-left: 0;
-        margin-top: 4px;
-        width: 100%;
-        order: 3;
-    }
-
-    .curriculum-tree-toggle {
-        order: 1;
-    }
-
-    .curriculum-tree-content {
-        order: 2;
-    }
-}
-
 /* Tree controls */
 .curriculum-tree-controls {
     display: flex;
@@ -279,4 +257,47 @@
 
 .curriculum-tree-toggle:focus::before {
     outline: none;
+}
+
+/* Custom fields*/
+.curriculum-tree-meta {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    display: flex;
+    gap: 5px;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+.curriculum-tree-meta li {
+    display: flex;
+    gap: 4px;
+    background-color: var(--secondary, #999);
+    padding: 2px 6px;
+    border-radius: 10px;
+    font-size: 11px;
+    color: var(--secondaryreverse, #333);
+}
+
+/* Responsive adjustments */
+@media (max-width: 768px) {
+    .curriculum-tree-item {
+        flex-wrap: wrap;
+    }
+
+    .curriculum-tree-actions {
+        margin-left: 0;
+        margin-top: 4px;
+        width: 100%;
+        order: 3;
+    }
+
+    .curriculum-tree-toggle {
+        order: 1;
+    }
+
+    .curriculum-tree-content {
+        order: 2;
+    }
 }
