--- a/templates/tree.mustache
+++ b/templates/tree.mustache
@@ -40,6 +40,9 @@
 }}
 <div class="curriculum-tree">
     <div class="curriculum-tree-controls">
+        <input type="text" class="curriculum-tree-filter form-control form-control-sm"
+               placeholder="{{#str}}filtertree, local_curriculum{{/str}}"
+               aria-label="{{#str}}filtertree, local_curriculum{{/str}}" />
         <button class="curriculum-tree-control-btn curriculum-tree-expand-all" title="{{#str}}expandall, local_curriculum{{/str}}">
             {{#str}}expandall, local_curriculum{{/str}}
         </button>
